[package]
name = "lists"
version = "0.1.0"
authors = ["gyc567 <gyc567@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
speculate = "0.1"
criterion = "0.3"


[dependencies]
typed-builder = "0.4.0"
ifmt = "0.2.0"
